tests/NormalTests/paczka1/fuzzy1/76545243.err
Error in line 1: rjYOzDD A519 49,2
Error in line 8: S713 S94 30,9
Error in line 7: ExLSRnOmgN S713 42,7
Error in line 29: 8WiF2z A655 59,3
Error in line 35: cPeht3uOYkG A519 14,3
